--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -240,7 +240,7 @@ p:not(:last-child) {
   height: var(--h);
   margin-right: var(--gap);
   border-radius: 50rem;
-  background-color: var(--color-primary-light);
+  background-color: var(--color-primary);
   cursor: pointer;
   outline: var(--outline, none);
   outline-offset: 0.25rem;
@@ -257,6 +257,9 @@ p:not(:last-child) {
   cursor: pointer;
   transform: translateX(var(--tX)) translateY(-50%);
   transition: transform 0.2s;
+}
+[data-theme=dark] .switch label:nth-of-type(2)::after {
+  background-color: var(--color-primary-dark);
 }
 
 @keyframes choice {
